--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -8,6 +8,11 @@
 
     <div class="container mt-4">
         <h1>Gérer les biens</h1>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message}}
+            </div> 
+        {% endfor %}
         <table class="table table-striped">
         <thead>
         <tr>
@@ -21,8 +26,9 @@
             <td>{{ property.title }}</td>
             <td>
                 <a href="{{ path('admin.property.edit', {id : property.id}) }}" class="btn btn-secondary">Editer</a>
-                <form method="post" action ="{{ path('admin.property.delete', {id: property.id}) }}" style="display:inline-block"></form>
+                <form method="post" action="{{ path('admin.property.delete', {id: property.id}) }}" style="display:inline-block" onsubmit="return confirm('Etes vous sûr de vouloir supprimer un bien')" >
                     <input type ="hidden" name ="_method" value="DELETE">
+                    <input type="hidden" name="_token" value="{{csrf_token('delete' ~ property.id )}}">
                     <button class="btn btn-danger">Supprimer</button>
                 </form>
             </td>
@@ -31,7 +37,7 @@
         </tbody>
     </table>
     <div class="text-right">
-        <a href="{{ path('admin.property.new') }}" class="btn btn-primary">Créer un nouveau bien</a>
+        <a href="{{ path('admin.property.new') }}" class="btn btn-primary">Créer un nouveau bien ?</a>
         
     </div>
 </div>
