--- a/templates/admin/property/_form.html.twig
+++ b/templates/admin/property/_form.html.twig
@@ -19,5 +19,6 @@
     <div class="row">
         <div class="col-md-8">{{ form_row(form.description) }}</div>
     </div>
+    {{form_rest(form)}}
     <button class="btn btn-primary">{{button|default('Enregistrer')}}</button>
 {{form_end(form)}}
