--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,5 +1,9 @@
 <div class="card mb-4">
-    <div class="card-body">
+        {% if property.filename %}
+        <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('my_thumb') }} " alt="" class="card-img-top" style="width: 100%; height:auto;">
+        
+        {% endif %}
+    <div class="card-body">  
         <h5 class="card-title">
         <a href="{{ path('property.show', {slug: property.slug, id: property.id }) }}">
             {{ property.title }}
