--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -8,6 +8,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
+                {% if property.filename %}
+                <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('medium') }} " alt="" class="card-img-top" style="width: 100%; height:auto;">
+                {% else %}
+                    <img src="{{ '/images/properties/empty.jpg' | imagine_filter('my_thumb') }} " alt="" class="card-img-top" style="width: 100%; height:auto;">      
+                {% endif %}
                 </div>
                 <div class="col-md-4">
                     <h1>
@@ -51,12 +56,16 @@
                         <td>Chauffage</td>
                         <td>{{ property.heatType }} m2</td>
                     </tr>
-
                 </table>
 
             </div>
             <div class="col-md-4">
                 <h2>Spécificités</h2>
+                <ul class="list-group">
+                {% for option in property.options %}
+                    <li class="list-group-item">{{ option.name }}</li>
+                {% endfor %}    
+                </ul>
             </div>
         </div>
     </div>
